@@ -704,11 +704,7 @@ exception::handle (EXCEPTION_RECORD *e, exception_list *frame, CONTEXT *in, void
 	framep -= 2;
 	break;
       }
-#endif
 
-  me.copy_context (in);
-
-#ifndef __x86_64__
   /* Temporarily replace windows top level SEH with our own handler.
      We don't want any Windows magic kicking in.  This top level frame
      will be removed automatically after our exception handler returns. */
@@ -1278,6 +1274,10 @@ sigpacket::process ()
       sigproc_printf ("using tls %p", tls);
     }
 
+  /* Do stuff for gdb */
+  if ((HANDLE) *tls)
+    tls->signal_debugger (si);
+
   void *handler = have_execed ? NULL : (void *) thissig.sa_handler;
 
   if (handler == SIG_IGN)
@@ -1349,21 +1349,6 @@ dosig:
     }
 
 dispatch_sig:
-  /* Do stuff for gdb */
-  if (si.si_code == SI_USER || !si.si_cyg)
-    {
-      CONTEXT c;
-      c.ContextFlags = CONTEXT_FULL;
-      if (&_my_tls == _main_tls)
-	RtlCaptureContext (&c);
-      else
-	GetThreadContext (hMainThread, &c);
-      _my_tls.copy_context (&c);
-
-      /* Tell gdb that we got a signal. Presumably, gdb already noticed this
-	 if we hit an exception.  */
-      _my_tls.signal_debugger (si.si_signo);
-    }
   if (have_execed)
     {
       sigproc_printf ("terminating captive process");
@@ -1431,22 +1416,45 @@ _cygtls::call_signal_handler ()
 }
 
 void
-_cygtls::copy_context (CONTEXT *c)
+_cygtls::signal_debugger (siginfo_t& si)
 {
-  memcpy (&thread_context, c, __COPY_CONTEXT_SIZE);
-}
-
-void
-_cygtls::signal_debugger (int sig)
-{
+  HANDLE th = NULL;
   if (isinitialized () && being_debugged ())
     {
+      CONTEXT c;
+      CONTEXT *pc;
+
+      if (si.si_cyg)
+	pc = ((cygwin_exception *) si.si_cyg)->context ();
+      else if (!(th = (HANDLE) *this))
+	return;
+      else
+	{
+	  SuspendThread (th);
+	  c.ContextFlags = CONTEXT_FULL;
+	  if (GetThreadContext (th, &c))
+	    pc = &c;
+	  else
+	    goto out;
+	  if (incyg)
+#ifdef __x86_64__
+	    c.Rip = retaddr ();
+#else
+	    c.Eip = retaddr ();
+#endif
+	  memcpy (&thread_context, pc, (&thread_context._internal -
+					(unsigned char *) &thread_context));
+	}
 #ifdef __x86_64__
       char sigmsg[2 * sizeof (_CYGWIN_SIGNAL_STRING " ffffffff ffffffffffffffff")];
 #else
       char sigmsg[2 * sizeof (_CYGWIN_SIGNAL_STRING " ffffffff ffffffff")];
 #endif
-      __small_sprintf (sigmsg, _CYGWIN_SIGNAL_STRING " %d %y %p", sig, thread_id, &thread_context);
+      __small_sprintf (sigmsg, _CYGWIN_SIGNAL_STRING " %d %y %p", si.si_signo,
+		       thread_id, &thread_context);
       OutputDebugString (sigmsg);
     }
+out:
+  if (th)
+    ResumeThread (th);
 }
